# bx-scholar-mcp

./: .env.example  .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_server.py
.github/workflows/: ci.yml
data/: jql_rankings.csv
docs/core/: migration-map.md
scripts/: parse_jql.py
