[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bx-scholar-mcp"
version = "1.0.0"
description = "MCP server for academic research — OpenAlex, CrossRef, ArXiv, SciELO, Semantic Scholar, Unpaywall, SJR/Qualis Rankings, Citation Verification, Bibliometrics, PDF Extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Leonardo Camilo", email = "leo@baxijen.ai"},
]
keywords = ["mcp", "academic-research", "openalex", "crossref", "scholar", "citation-verification", "bibliometrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.12.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pymupdf>=1.25.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/leomcamilo/bx-scholar-mcp"
Issues = "https://github.com/leomcamilo/bx-scholar-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
