[project]
name = "bx-scholar-mcp"
version = "1.0.0"
description = "BX-Scholar MCP — Academic research toolkit monorepo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Leonardo Camilo", email = "leo@baxi.ia.br"},
]

# Legacy monolith dependencies — kept for run_server.py backward compat
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.12.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pymupdf>=1.25.0",
    # Workspace packages
    "bx-scholar-core",
    "bx-scholar-workflow",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
bx-scholar = "run_server:main"

[project.urls]
Homepage = "https://github.com/leomcamilo/bx-scholar-mcp"
Issues = "https://github.com/leomcamilo/bx-scholar-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
bx-scholar-core = { workspace = true }
bx-scholar-workflow = { workspace = true }
